[gd_scene load_steps=10 format=2]

[ext_resource path="res://core/game_stages/common/GameStage.tscn" type="PackedScene" id=1]
[ext_resource path="res://quiz_game/game_stages/question_stage/QuizGameQuestionGameStage.gd" type="Script" id=2]
[ext_resource path="res://quiz_game/textures/wooden-texture-gb10000acb_1920.jpg" type="Texture" id=3]
[ext_resource path="res://quiz_game/ui/fonts/PermanentMarker-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://quiz_game/ui/QuizGameTheme.tres" type="Theme" id=5]
[ext_resource path="res://core/game_stages/common/PlayerIconDisplay.tscn" type="PackedScene" id=6]
[ext_resource path="res://quiz_game/player/QuizPlayerIcon.tscn" type="PackedScene" id=7]
[ext_resource path="res://core/game_stages/common/CountdownDisplay.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 60
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )

[node name="QuizGameQuestionGameStage" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
texture = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="3"]
margin_top = 110.0
margin_right = 1920.0
margin_bottom = 760.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Question" type="Label" parent="VBoxContainer" index="0"]
margin_right = 1920.0
margin_bottom = 369.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnswersContainer" type="GridContainer" parent="VBoxContainer" index="1"]
margin_top = 373.0
margin_right = 1920.0
margin_bottom = 650.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
custom_constants/vseparation = 20
custom_constants/hseparation = 20
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerIconDisplay" parent="VBoxContainer" index="2" instance=ExtResource( 6 )]
position = Vector2( 970.92, 829.643 )
player_icon_scene = ExtResource( 7 )
margin_x = 0.124
x_axis_wave = 0.069
player_icon_scale = 0.8

[node name="CountdownDisplay" parent="." index="4" instance=ExtResource( 8 )]
margin_left = 22.4568
margin_top = -14.5223
margin_right = 343.457
margin_bottom = 133.477
